Improvements to yaml for patch
